--- a/index.css
+++ b/index.css
@@ -108,6 +108,11 @@ section {
 
 
 @media (min-width: 768px) {
+ body { 
+   margin: 0%; 
+   padding: 0 1rem 0 1rem; 
+ }
+
   header {
     flex-direction: row;
     justify-content: flex-start;
